--- a/app/src/Componentes/Home/home.css
+++ b/app/src/Componentes/Home/home.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+body {
+  padding: 0;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container-lista-usuario {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  box-sizing: content-box;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  background: yellow;
+  border: 1px solid black;
 }
 
-.App-link {
-  color: #61dafb;
+.lista-usuario {
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.lista-usuario img {
+  border-radius: 50%;
+  margin-left: 3em;
+}
+
+.usuario-perfil {
+  padding-left: 1em;
+}
+
+.botao {
+  margin-right: 3em;
 }
