--- a/app/src/Componentes/Cabecalho/cabecalho.css
+++ b/app/src/Componentes/Cabecalho/cabecalho.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;600&display=swap');
+
 body {
   margin: 0px;
   padding: 0px;
@@ -7,6 +9,7 @@ body {
   display: flex;
   justify-content: center;
   width: 100%;
+  height: 10vw;
   background-color: rgb(43, 43, 43);
   box-sizing: border-box;
 }
@@ -17,8 +20,23 @@ body {
   justify-content: space-between;
   align-content: center;
   width: 100%;
+  margin: 0px 15px;
 }
 
 .cabecalho-imagem {
-  width: 10vw;
+  width: 8vw;
+}
+
+.titulo-cabecalho {
+  font-family: 'Rajdhani', sans-serif;
+  font-size: 2em;
+  font-weight: 600;
+  color: #fff;
+}
+
+.titulo-sobre {
+  font-family: 'Rajdhani', sans-serif;
+  font-size: 1.2em;
+  font-weight: 300;
+  color: rgb(238, 255, 5);
 }
