--- a/app/src/Componentes/Cabecalho/cabecalho.css
+++ b/app/src/Componentes/Cabecalho/cabecalho.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;600&display=swap");
 
 body {
   margin: 0px;
@@ -23,12 +23,12 @@ body {
 }
 
 .cabecalho-imagem {
-  width: 8vw;
+  width: auto;
   margin-right: 30px;
 }
 
 .titulo-cabecalho {
-  font-family: 'Rajdhani', sans-serif;
+  font-family: "Rajdhani", sans-serif;
   font-size: 2em;
   font-weight: 600;
   color: #fff;
